--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,10 +93,50 @@ nav a{
 
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* about section  styles*/
 .about{
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+   
+}
+main section{
+    margin-top: 130px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+   text-align: center;
+}
+/* skills related styles */
+#What-i-do description{
+    padding: 30px 150px;
+}
+.skills-containar{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+.skill-description{
+    color:#757575;
+}
+/* Resume section styles */
+
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
