--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,9 +19,9 @@ body{
 } 
 .section-title{
     color: #181818;
-text-align: center;
-font-size: 35px;
-font-weight: 700;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
 
 }
 .section-description{
@@ -59,9 +59,9 @@ nav a{
 /* header related styles */
 .header{
     background-color: #FFF8F3;
-    background-image:url('../images/header_bg.png') ;
+    background-image:url('../images/header_bg.png'),url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 .banner{
     padding:30px 30px 0px 150px ;
@@ -119,7 +119,7 @@ main section{
 #What-i-do description{
     padding: 30px 150px;
 }
-.skills-containar{
+.skills-container{
     display: flex;
     gap: 24px;
 }
@@ -160,7 +160,32 @@ main section{
 .resume-container hr{
     margin: 30px;
 }
-.dowmload-cv{
+.download-cv{
     text-align: center;
     margin-top: 50px;
 }
+/* footer styles */
+footer{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-links a{
+    margin-right:25px ;
+}
+.contact input[type="text"],  .contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+}
+   
